Fixed scaling of button text on small devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,10 @@ footer {
         width: 100%;
     }
 
+    .element-choice {
+        font-size: 4vmax;
+    }
+
     #game-over {
         width: 100%;
         top: 200px;
